syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.glance.spaces.zapp.content";

package com.glance.spaces.zapp.content;

import "com/glance/spaces/zapp/content/bg_info_xs_element.proto";
import "com/glance/spaces/zapp/content/common/headlines_xxl_element.proto";
import "com/glance/spaces/zapp/content/common/roundup_data_element.proto";
import "com/glance/spaces/zapp/content/games/featured_game_xl_element.proto";
import "com/glance/spaces/zapp/content/games/leaderboard_game_lh_element.proto";
import "com/glance/spaces/zapp/content/games/recently_played_games_md_element.proto";
import "com/glance/spaces/zapp/content/games/top_instant_game_xl_element.proto";
import "com/glance/spaces/zapp/content/roposo/entertainment_ln_element.proto";
import "com/glance/spaces/zapp/content/roposo/entertainment_md_element.proto";
import "com/glance/spaces/zapp/content/roposo/entertainment_video_lh_element.proto";
import "com/glance/spaces/zapp/content/roposo/hot_topic_xl_element.proto";
import "com/glance/spaces/zapp/content/roposo/trends_xxl_element.proto";
import "com/glance/spaces/zapp/content/shop/daily_deal.proto";
import "com/glance/spaces/zapp/content/shop/product_drops_lv_element.proto";
import "com/glance/spaces/zapp/content/sports/match_ln_element.proto";
import "com/glance/spaces/zapp/content/sports/match_xs_element.proto";
import "com/glance/spaces/zapp/content/sports/match_xxl.proto";
import "com/glance/spaces/zapp/content/sports/nba_match_element.proto";
import "com/glance/spaces/zapp/content/sports/off_season.proto";
import "com/glance/spaces/zapp/content/sports/sports_headlines_xxl.proto";
import "com/glance/spaces/zapp/content/sports/standings_xxl_element.proto";
import "com/glance/spaces/zapp/content/trendz/categorised_lv_xxl_element.proto";
import "com/glance/spaces/zapp/content/common/headlines_ln_element.proto";
import "com/glance/spaces/zapp/content/common/headlines_md_element.proto";
import "com/glance/spaces/zapp/content/trendz/tagged_article_lh_element.proto";
import "com/glance/spaces/zapp/content/trendz/tagged_article_ln_element.proto";
import "com/glance/spaces/zapp/content/games/recently_played_games_ln_element.proto";
import "com/glance/spaces/zapp/content/common/roundup_card_element.proto";
import "com/glance/spaces/zapp/content/common/infinity_scroll_lv_element.proto";
import "com/glance/spaces/zapp/content/games/partner_game_xxl_element.proto";
import "com/glance/spaces/zapp/content/games/live_stream_xxl_element.proto";
import "com/glance/spaces/zapp/content/games/new_arrivals_xl_element.proto";
import "com/glance/spaces/zapp/content/games/editors_choice_xxl_element.proto";
import "com/glance/spaces/zapp/content/games/top_three_mxl_element.proto";
import "com/glance/spaces/zapp/content/games/community_xxl_element.proto";
import "com/glance/spaces/zapp/content/games/games_ln_element.proto";
import "com/glance/spaces/zapp/content/weather/weather_info_ln_v1_element.proto";
import "com/glance/spaces/zapp/content/trendz/breaking_news_md_element.proto";
import "com/glance/spaces/zapp/content/games/games_md_element.proto";
import "com/glance/spaces/zapp/content/games/instant_game_xxl_element.proto";
import "com/glance/spaces/zapp/content/shop/trending_today.proto";
import "com/glance/spaces/zapp/content/shop/trending_today_ls.proto";
import "com/glance/spaces/zapp/content/shop/budget_buy_ls.proto";
import "com/glance/spaces/zapp/content/preferences/set_preference_element.proto";
import "com/glance/spaces/zapp/content/horoscope/horoscope_lh_element.proto";

message WidgetContent {
  oneof typed_element {// Will add L0 data Model here...
    roposo.EntertainmentVideoLhElement entertainment_video_lh = 1;
    shop.ProductDropsLvElement product_drops_lv = 2;
    trendz.TaggedArticleLhElement tagged_article = 3;
    sports.NbaMatchElement nba_match = 4;
    games.LeaderboardGameLhElement leaderboard_game_lh = 5;
    games.TopInstantGameXlElement top_instant_game_xl = 6;
    games.RecentlyPlayedGamesMdElement recently_played_games_md = 7;
    trendz.CategorisedLvXxlElement top_story_categorised_lv_xxl = 8;
    sports.SportsHeadlinesXxlElement sports_headlines_xxl = 9;
    sports.MatchXxl league_match_xxl = 10;
    sports.MatchXxl team_match_xxl = 11;
    common.RoundupDataElement roundup_data_element = 12;
    games.FeaturedGameXlElement featured_game_xl = 13;
    sports.OffSeason off_season_mxl = 15;
    trendz.TaggedArticleLnElement tagged_article_ln_element = 16;
    common.HeadlinesLnElement headlines_ln_element = 17;
    BgInfoXsElement bg_info_xs_element = 18;
    sports.MatchXsElement match_xs_element = 19;
    sports.MatchLnElement match_ln_element = 20;
    common.HeadlinesMdElement headlines_md_element = 21;
    games.RecentlyPlayedGamesLnElement recently_played_games_ln = 22;
    common.RoundupCardElement roundup_card_element_ln = 23;
    common.RoundupCardElement roundup_card_element_md = 24;
    games.PartnerGameXxlElement partner_game_xxl_element = 25;
    games.LiveStreamXxlElement live_stream_xxl_element = 26;
    games.NewArrivalsXlElement new_arrivals_xl_element = 27;
    games.EditorsChoiceXxlElement editors_choice_xxl_element = 28;
    games.TopThreeMxlElement top_three_mxl_element = 29;
    games.CommunityXxlElement community_xxl_element = 30;
    games.GamesLnElement games_ln_element = 31;
    WeatherInfoLnElement weather_info_ln_element = 32;
    trendz.BreakingNewsMdElement breaking_news_md_element = 33;
    games.GamesMdElement games_md_element = 34;
    shop.DailyDeal daily_deal_xl = 35;
    common.HeadlinesXxlElement headlines_xxl = 36;
    games.InstantGameXxlElement instant_game_xxl_element = 37;
    roposo.EntertainmentLnElement entertainment_ln_element = 38;
    roposo.EntertainmentMdElement entertainment_md_element = 39;
    roposo.HotTopicXlElement hot_topic_xl_element = 40;
    roposo.TrendsXxlElement trends_xxl_element = 41;
    shop.TrendingToday trending_today_xxl = 42;
    shop.DailyDeal daily_deal_ls = 43;
    shop.TrendingTodayLs trending_today_ls = 44;
    shop.BudgetBuyLs budget_buy_ls = 45;
    sports.StandingsXxlElement standings_xxl_element = 46;
    common.InfinityScrollLvElement infinity_scroll_lv_element = 47;
    preferences.SetPreferenceElement set_preference_element = 48;
    horoscope.HoroscopeLhElement horoscope_lh_element = 49;
  }
}
